# mugen

./: AudioAPI.cpp  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MusicBox.cpp  MusicBox.h  README.md  Texture.h  WaveformMenu.cpp  WaveformMenu.h  main.cpp  oscillator.cpp
cmake/: FindSDL2TTF.cmake  FindSDL2_image.cmake
include/: AudioAPI.h  ButtonControl.h  CheckboxControl.h  CompositionMenu.h  Config.h  Control.h  Deserializer.h  Direction.h  Envelope.h  Envelope.print.h  GraphPainter.cpp  GraphPainter.h  Instrument.h  InstrumentMenu.h  ItemList.cpp  ItemList.h  MainWindow.h  Menu.h  MusicBox.h  OptionsMenu.h  Oscillator.h  SDL_Utils.h  Segment.h  Segment.print.h  SegmentManager.h  SelectControl.h  SelectorType.h  Serializer.h  Texture.h  Timeline.h  WaveformMenu.h  WaveformType.h  json.h  oscillator.h
portsf/: Makefile  breakpoints.c
portsf/include/: breakpoints.h  portsf.h
source/: AudioAPI.cpp  ButtonControl.cpp  CheckboxControl.cpp  CompositionMenu.cpp  CompositionMenu.print.cpp  Config.cpp  Deserializer.cpp  Envelope.cpp  GraphPainter.cpp  Instrument.cpp  InstrumentMenu.cpp  ItemList.cpp  MainWindow.cpp  MusicBox.cpp  MusicBox.print.cpp  OptionsMenu.cpp  Oscillator.cpp  Segment.cpp  SelectControl.cpp  Serializer.cpp  Timeline.cpp  WaveformMenu.cpp  oscillator.cpp
